@@ -2,7 +2,7 @@ package org.opentripplanner.updater.alert.siri.mapping;
 
 import java.util.List;
 import org.opentripplanner.transit.model.basic.TransitMode;
-import uk.org.siri.siri20.VehicleModesEnumeration;
+import uk.org.siri.siri21.VehicleModesEnumeration;
 
 public class SiriTransportModeMapper {
 
@@ -13,11 +13,12 @@ public class SiriTransportModeMapper {
     if (vehicleModes == null || vehicleModes.isEmpty()) {
       return TransitMode.BUS;
     }
-    return switch (vehicleModes.get(0)) {
+    return switch (vehicleModes.getFirst()) {
       case RAIL -> TransitMode.RAIL;
       case COACH -> TransitMode.COACH;
       case BUS -> TransitMode.BUS;
       case METRO, UNDERGROUND -> TransitMode.SUBWAY;
+      case TAXI -> TransitMode.TAXI;
       case TRAM -> TransitMode.TRAM;
       case FERRY -> TransitMode.FERRY;
       case AIR -> TransitMode.AIRPLANE;
